--- a/index.html
+++ b/index.html
@@ -997,6 +997,8 @@ figure img.thumbnail {
     width="150" 
   />
 </a>
+<a href="https://www.siteswebdirectory.com/Health_Medical/Dentistry/">Dentists Marketing</a>
+<a href="https://www.promotebusinessdirectory.com/">Directory Website Promote</a>
 
 
           <!-- Add more icons as needed -->
